See you tomorrow

--- a/courses.html
+++ b/courses.html
@@ -9,28 +9,27 @@
   </head>
   <body>
     <nav class="main-nav">
-        <ul class="main-nav-ul">
-            <li><a href="#">Courses</a></li>
-            <li><a href="#">How It Works</a></li>
-            <li><a href="#">Graduate Outcomes</a></li>
-            <li><a href="#">Blog</a></li>
-        </ul>
+      <ul class="main-nav-ul">
+        <li><a href="#">Courses</a></li>
+        <li><a href="#">How It Works</a></li>
+        <li><a href="#">Graduate Outcomes</a></li>
+        <li><a href="#">Blog</a></li>
+      </ul>
     </nav>
     <header class="header">
-        <h1>Build a career you love</h1>
-        <p>Become a UX designer, UI designer, web developer, or data analyst from scratch!</p>
-        <button><a href="#course-selection">Find the Right Course for You</a></button>
+      <h1>Build a career you love</h1>
+      <p>Become a UX designer, UI designer, web developer, or data analyst from scratch!</p>
+      <button><a href="#course-selection">Find the Right Course for You</a></button>
     </header>
     <main class="careerfoundry-courses">
-        <a id="course-selection"></a>
-        <div class="courses">
-            <div id="course-title">
-                <span></span>
-            </div>
-        </div>
+      <a id="course-selection"></a>
+      <h2>Our Current Courses</h2>
+      <div class="courses">
+        <ul id="course-container"></ul>
+      </div>
     </main>
     <footer>
-        <p>Developed with ❤️ in Berlin by Laurel Wright</p>
+      <p>Developed with ❤️ in Berlin by Laurel Wright</p>
     </footer>
     <script src="courses.js"></script>
   </body>
