Figured out HTML rendering

--- a/courses.html
+++ b/courses.html
@@ -23,10 +23,8 @@
     </header>
     <main class="careerfoundry-courses">
       <a id="course-selection"></a>
-      <h2>Our Current Courses</h2>
-      <div class="courses">
-        <ul id="course-container"></ul>
-      </div>
+      <h2>Our Courses</h2>
+      <div id="app"></div>
     </main>
     <footer>
       <p>Developed with ❤️ in Berlin by Laurel Wright</p>
