--- a/courses.html
+++ b/courses.html
@@ -19,12 +19,13 @@
     <header class="header">
       <h1>Build a career you love</h1>
       <p>Become a UX designer, UI designer, web developer, or data analyst from scratch!</p>
-      <button><a href="#course-selection">Find the Right Course for You</a></button>
+      <a href="#course-selection">Find the Right Course for You</a>
     </header>
     <main class="careerfoundry-courses">
       <a id="course-selection"></a>
       <h2>Our Courses</h2>
-      <div id="app"></div>
+      <div id="courses"></div>
+      <div id="app-details"></div>
     </main>
     <footer>
       <p>Developed with ❤️ in Berlin by Laurel Wright</p>
